Some little detail changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body{
   height: 100vh;
 }
 
+.hover-stuff:hover{
+  cursor: pointer;
+}
+
 #clock-text{
   color: white;
   text-shadow: 2px 2px black;
